fixed mentors remarks